Fix overflow in the work section.

--- a/style/style.css
+++ b/style/style.css
@@ -196,7 +196,6 @@ ul {
   grid-row-gap: 8rem;
   padding-bottom: 10rem;
   padding-top: 5rem;
-  padding-right: 2rem;
 }
 
 .card-work {
